use gem to handle csrf, fixes first request 422 error

--- a/server/Gemfile
+++ b/server/Gemfile
@@ -59,6 +59,8 @@ gem 'sanitize', '~> 6.0.0'
 #google analytics
 gem 'staccato', '~> 0.5.3'
 
+gem 'angular_rails_csrf', '~> 5.0.0'
+
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
